Working on creating a completely SVG based banner to better fit in the Reveal.js slide deck.  The closest possible open font I could find is included in the fonts subdirectory of the gh-pages branch along with its license.  This required modifying the SASS file a bit to pick up the font reference so it could be used as part of CSS styling.

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -11,6 +11,11 @@
  * RESET STYLES
  *********************************************/
 
+@font-face{
+	font-family : 'Gidole Regular';
+	src : url(../fonts/Gidole-Regular.ttf)
+}
+
 html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe,
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre,
 .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code,
