Adds title slide and footer formatting based on template
Why :
* SDP Team put together a slide deck template for convening
* Some template elements would not port easily to web-based technologies
* We want to be able to host our slides for free on GitHub

This change addresses this need by:
* Created SVG Banner to replicate banner element in title slide as closely as possible
* Created SVG Footer to replicate footer element for all other slides as closely as possible
* Found plugin for Reveal.js that made it relatively easy to add the footer element to the appropriate slides
* Modified CSS to place navigation controls above the footer
* Recompiled SCSS file to generate modified Reveal.js CSS file
* Modified footer plugin to display the SVG image

--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -76,8 +76,9 @@ body {
 .reveal img,
 .reveal video,
 .reveal iframe {
-  max-width: 95%;
-  max-height: 95%; }
+  max-width: 99%;
+/*  max-height: 99%; */
+}
 
 .reveal strong,
 .reveal b {
