--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -32,7 +32,7 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 36px;
 	font: inherit;
 	vertical-align: baseline;
 }
