--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -32,7 +32,7 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 36px;
+	font-size: 18px;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -1245,26 +1245,26 @@ body {
 	}
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner .title {
-		font-size: 20px;
+		font-size: 12px;
 	}
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner table {
-		border: 1px solid #fff;
+		border: none;
 		border-collapse: collapse;
-		font-size: 16px;
+		font-size: 12px;
 	}
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner table th,
 	.reveal .overlay.overlay-help .viewport .viewport-inner table td {
 		width: 200px;
-		padding: 14px;
-		border: 1px solid #fff;
+		padding: 1px;
+		border: none;
 		vertical-align: middle;
 	}
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner table th {
-		padding-top: 20px;
-		padding-bottom: 20px;
+		padding-top: 1px;
+		padding-bottom: 1px;
 	}
 
 
@@ -1354,7 +1354,7 @@ body {
 	bottom: 26px;
 	padding: 10px;
 	z-index: 1;
-	font-size: 18px;
+	font-size: 12px;
 	line-height: 1.4;
 	color: #fff;
 	background-color: rgba(0,0,0,0.5);
@@ -1371,7 +1371,7 @@ body {
 
 @media screen and (max-width: 1024px) {
 	.reveal .speaker-notes {
-		font-size: 14px;
+		font-size: 12px;
 	}
 }
 
