--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -173,8 +173,8 @@ body {
 .reveal table th,
 .reveal table td {
   text-align: left;
-  padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
+  padding: 0.2em 0.2em 0.2em 0.2em;
+  border-bottom: none; }
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
