--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -386,13 +386,13 @@ body {
 
 .reveal .slides {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 97%;
+	height: 97%;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	margin: auto;
+	margin: 2.5%;
 
 	overflow: visible;
 	z-index: 1;
