--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -143,23 +143,25 @@ body {
 .reveal pre {
   display: block;
   position: relative;
-  width: 90%;
-  margin: 20px auto;
-  text-align: left;
-  font-size: 0.55em;
+  width: 95%;
+  height: 95%;
+  font-size: 48px;
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+   }
 
 .reveal code {
   font-family: monospace; }
 
 .reveal pre code {
   display: block;
-  padding: 5px;
-  overflow: auto;
-  max-height: 400px;
+
+  overflow-x: scroll;
+  overflow-y: scroll;
+  max-height: 90%;
+  max-width: 90%;
+  max-font-size: 128px;
   word-wrap: normal; }
 
 .reveal table {
