--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -228,14 +228,14 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px 0px;
+  margin: 1px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+}
 
 .reveal section img.plain {
   border: 0;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 .reveal a img {
   -webkit-transition: all .15s linear;
